# mactux

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs
crates/loader/: Cargo.toml
crates/loader/src/: auxv.rs  lib.rs  mmap.rs  shebang.rs  stack.rs
crates/loader/src/elf/: mod.rs  stack.rs
crates/macros/src/: lib.rs  syscall.rs
crates/mactux_ipc/: Cargo.toml
crates/mactux_ipc/src/: handshake.rs  lib.rs  request.rs  response.rs
crates/mactux_ipc/src/request/: mod.rs
crates/mactux_ipc/src/response/: mod.rs
crates/rtenv/: Cargo.toml
crates/rtenv/src/: emuctx_x86_64.rs  error_report.rs  ipc_client.rs  lib.rs  misc.rs  process.rs  security.rs  signal.rs  switches.rs  thread.rs  util.rs  vfd.rs
crates/rtenv/src/fs/: mod.rs  vfd.rs
crates/structures/: Cargo.toml
crates/structures/src/: convention.rs  error.rs  fs.rs  io.rs  lib.rs  mapper.rs  misc.rs  mm.rs  net.rs  process.rs  security.rs  signal.rs  sync.rs  terminal.rs  thread.rs  time.rs  ucontext.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: common.rs  lib.rs  util.rs  x86_64.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/emulator/: register_redirection.md
docs/src/server/: vfd.md  vfs.md
libs/loader/: Cargo.toml
libs/loader/src/: lib.rs  shebang.rs
libs/macros/: Cargo.toml
libs/macros/src/: gui_helper_method.rs  lib.rs  syscall.rs
libs/mactux_ipc/src/: lib.rs  response.rs  types.rs
libs/rtenv/: Cargo.toml
libs/rtenv/src/: emuctx_x86_64.rs  error_report.rs  ipc_client.rs  lib.rs  misc.rs  mm.rs  process.rs  rust.rs  security.rs  signal.rs  switches.rs  thread.rs  util.rs  vfd.rs
libs/rtenv/src/fs/: mod.rs  vfd.rs
libs/rtenv/src/io/: mod.rs  native_ioctl.rs  vfd.rs
libs/rtenv/src/io_uring/: worker.rs
libs/rtenv/src/mm/: mod.rs  region.rs
libs/rtenv/src/net/: mod.rs  sockopt.rs
libs/rtenv/src/sync/: futex.rs  mod.rs  pi_futex.rs
libs/structures/: Cargo.toml
libs/structures/src/: device.rs  error.rs  files.rs  fs.rs  io.rs  lib.rs  mactux_ipc.rs  mapper.rs  misc.rs  mm.rs  net.rs  process.rs  signal.rs  sync.rs  terminal.rs  thread.rs  time.rs  ucontext.rs
libs/syscall/: Cargo.toml
libs/syscall/src/: common.rs  lib.rs  util.rs  x86_64.rs
mactux_server/: Cargo.toml
mactux_server/src/: config.rs  device.rs  file.rs  main.rs  net.rs  poll.rs  process.rs  server.rs  sysinfo.rs  syslog.rs  thread.rs  util.rs  uts.rs  vfd.rs  work_dir.rs
mactux_server/src/audio/: mod.rs  oss.rs
mactux_server/src/device/: auxmem.rs  loopdev.rs  mod.rs  oss.rs  term.rs
mactux_server/src/filesystem/: devtmpfs.rs  mod.rs  nativefs.rs  tmpfs.rs  vfs.rs
mactux_server/src/filesystem/kernfs/: mod.rs  typical_files.rs
mactux_server/src/filesystem/procfs/: mod.rs  pid.rs  sysinfo.rs
mactux_server/src/filesystem/sysfs/: mod.rs
mactux_server/src/ipc/: listener.rs  methods.rs  mod.rs  session.rs
mactux_server/src/multimedia/: audio.rs  gui.rs  mod.rs
mactux_server/src/network/: abs.rs  mod.rs
mactux_server/src/server/: interruptible.rs  mod.rs  operations.rs
mactux_server/src/task/: mod.rs  process.rs  thread.rs  tid_alloc.rs
mactux_server/src/vfd/: eventfd.rs  mod.rs
servers/mactux_gui_helper/: Cargo.toml
servers/mactux_gui_helper/src/: config.rs  ipc.rs  main.rs  util.rs
servers/mactux_server/: Cargo.toml
servers/mactux_server/src/: main.rs  poll.rs  sysinfo.rs  syslog.rs  util.rs  vfd.rs
servers/mactux_server/src/device/: loopdev.rs  mod.rs  oss.rs  term.rs
servers/mactux_server/src/filesystem/: eventfd.rs  invalidfd.rs  mod.rs  nativefs.rs  tmpfs.rs  vfs.rs
servers/mactux_server/src/filesystem/procfs/: mod.rs  pid.rs  sysinfo.rs
servers/mactux_server/src/filesystem/sysfs/: mod.rs
servers/mactux_server/src/filesystem/tmpfs/: mod.rs  regular.rs
servers/mactux_server/src/ipc/: interruptible.rs  methods.rs  mod.rs  session.rs
servers/mactux_server/src/multimedia/: audio.rs  mod.rs
servers/mactux_server/src/network/: mod.rs
servers/mactux_server/src/task/: mod.rs  process.rs  thread.rs  tid_alloc.rs
src/: main.rs
tools/: makedev.sh
tools/mkrootfs/: fstab  mkrootfs.py  mkrootfs_alpine.py  mkrootfs_arch.py
vdso/: .gitignore  build.sh  x86_64.map  x86_64.s
(+23 files in other folders)
