[package]
name = "mactux"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[workspace]
members = [
    "libs/loader",
    "libs/macros",
    "libs/rtenv",
    "libs/structures",
    "libs/syscall",
    "servers/mactux_gui_helper",
    "servers/mactux_server",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
syscall = { path = "libs/syscall" }
loader = { path = "libs/loader" }
rtenv = { path = "libs/rtenv" }
structures = { path = "libs/structures" }
mimalloc = "0.1"
