[package]
name = "mactux_server"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
papaya = "0.2"
structures = { path = "../crates/structures" }
mactux_ipc = { path = "../crates/mactux_ipc" }
tracing = "0.1"
tracing-subscriber = "0.3"
libproc = "0.14"
rodio = { version = "0.21", optional = true }
rustc-hash = "2"
crossbeam = "0.8.4"
mach2 = "0.5"
