[package]
name = "mactux_server"
version = "0.0.1"
edition = "2024"

[features]
default = ["audio", "gui"]
audio = ["dep:rodio"]
gui = []

[dependencies]
anyhow = "1"
bincode = "2"
clap = { version = "4", features = ["derive"] }
dashmap = "5"
libc = "0.2"
structures = { path = "../crates/structures" }
mactux_ipc = { path = "../crates/mactux_ipc" }
libproc = "0.14"
log = "0.4"
rodio = { version = "0.21", default-features = false, features = ["playback"], optional = true }
rustc-hash = "2"
crossbeam = "0.8.4"
mach2 = "0.5"
