[package]
name = "mactux_server"
version = "0.0.1"
edition = "2024"

[features]
default = ["audio", "gui"]
audio = ["dep:rodio"]
gui = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
libc = "0.2"
structures = { path = "../../libs/structures" }
libproc = "0.14"
log = "0.4"
rustc-hash = "2"
crossbeam = "0.8.4"
postcard = { version = "1", default-features = false, features = ["use-std"] }
serde = "1"
mach2 = "0.6"

[dependencies.rodio]
version = "0.22"
default-features = false
features = ["playback"]
optional = true
